styles/styles.css
/*
 * Copyright 2020 Adobe. All rights reserved.
 * This file is licensed to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License. You may obtain a copy
 * of the License at http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 * OF ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 */

:root {
    /* colors */
    --background-color: white;
    --light-color: #f8f8f8;
    --dark-color: #505050;
    --text-color: #131313;
    --link-color: #000;
    --link-hover-color: #987147;

    /* fonts */
    --body-font-family: roboto, roboto-fallback, sans-serif;
    --heading-font-family: roboto-condensed, roboto-condensed-fallback,
        sans-serif;

    /* body sizes */
    --body-font-size-m: 22px;
    --body-font-size-s: 19px;
    --body-font-size-xs: 17px;

    /* heading sizes */
    --heading-font-size-xxl: 55px;
    --heading-font-size-xl: 44px;
    --heading-font-size-l: 34px;
    --heading-font-size-m: 27px;
    --heading-font-size-s: 24px;
    --heading-font-size-xs: 22px;

    /* nav height */
    --nav-height: 70px;
}

/* fallback fonts */
@font-face {
    font-family: roboto-condensed-fallback;
    size-adjust: 88.82%;
    src: local("Arial");
}

@font-face {
    font-family: roboto-fallback;
    size-adjust: 99.529%;
    src: local("Arial");
}

@media (width >= 900px) {
    :root {
        /* body sizes */
        --body-font-size-m: 18px;
        --body-font-size-s: 16px;
        --body-font-size-xs: 14px;

        /* heading sizes */
        --heading-font-size-xxl: 45px;
        --heading-font-size-xl: 36px;
        --heading-font-size-l: 28px;
        --heading-font-size-m: 22px;
        --heading-font-size-s: 20px;
        --heading-font-size-xs: 18px;
    }
}

body {
    display: none;
    margin: 0;
    color: var(--text-color);
    color: #000;
    font-size: 0.9375rem;
    letter-spacing: 0.1px;
    line-height: 1.9;
}

@media print, screen and (width >= 48em) {
    body {
        font-size: 1rem;
        letter-spacing: 0.2px;
        line-height: 1.75;
    }
}

body.appear {
    display: block;
}

header {
    height: var(--nav-height);
}

header .header,
footer .footer {
    visibility: hidden;
}

header .header[data-block-status="loaded"],
footer .footer[data-block-status="loaded"] {
    visibility: visible;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin-top: 0.8em;
    margin-bottom: 0.25em;
    font-family: var(--heading-font-family);
    font-weight: 600;
    line-height: 1.25;
    scroll-margin: 40px;
}

h1 {
    font-size: var(--heading-font-size-xxl);
}

h2 {
    font-size: var(--heading-font-size-xl);
}

h3 {
    font-size: var(--heading-font-size-l);
}

h4 {
    font-size: var(--heading-font-size-m);
}

h5 {
    font-size: var(--heading-font-size-s);
}

h6 {
    font-size: var(--heading-font-size-xs);
}

p,
dl,
ol,
ul,
pre,
blockquote {
    margin-top: 0.8em;
    margin-bottom: 0.25em;
}

code,
pre {
    font-size: var(--body-font-size-s);
}

pre {
    padding: 16px;
    border-radius: 8px;
    background-color: var(--light-color);
    overflow-x: auto;
    white-space: pre;
}

main > div {
    margin: 40px 16px;
}

input,
textarea,
select,
button {
    font: inherit;
}

/* links */
a:any-link {
    color: var(--link-color);
    text-decoration: none;
    overflow-wrap: break-word;
}

a:hover {
    color: var(--link-hover-color);
    text-decoration: underline;
}

/* buttons */
a.button:any-link,
button {
    box-sizing: border-box;
    display: inline-block;
    max-width: 100%;
    margin: 12px 0;
    font-family: "Averta PE Extrabold";
    text-transform: uppercase;
    font-style: normal;
    font-weight: 500;
    font-size: 14px;
    letter-spacing: 2px;
    line-height: 1.286;
    padding: 1.0625rem 1.875rem 1.125rem;
    text-align: center;
    text-decoration: none;
    background-color: var(--link-color);
    color: var(--background-color);
    cursor: pointer;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    transition: background-color 0.3s ease-in-out;
}

a.button:hover,
a.button:focus,
button:hover,
button:focus {
    background-color: var(--link-hover-color);
    cursor: pointer;
}

button:disabled,
button:disabled:hover {
    background-color: var(--light-color);
    cursor: unset;
}

a.button.secondary,
button.secondary {
    background-color: unset;
    border: 2px solid currentcolor;
    color: var(--text-color);
}

main img {
    max-width: 100%;
    width: auto;
    height: auto;
}

.icon {
    display: inline-block;
    height: 24px;
    width: 24px;
}

.icon img {
    height: 100%;
    width: 100%;
}

/* sections */
main > .section {
    margin: 40px 0;
}

main > .section > div {
    max-width: 1200px;
    margin: auto;
    padding: 0 24px;
}

main > .section:first-of-type {
    margin-top: 0;
}

@media (width >= 900px) {
    main > .section > div {
        padding: 0 32px;
    }
}

/* section metadata */
main .section.light,
main .section.highlight {
    background-color: var(--light-color);
    margin: 0;
    padding: 40px 0;
}

.ce-fact-slider .fact-text,
.ce-fact-slider .fact-subline,
.ce-fact-slider .fact-number,
.sdg-icon-text [data-tippy-root] a,
.sdg-icon-text [data-tippy-root] h3,
.ce-graphic-natural-capital .table-container .natural-capital td.side,
.ce-graphic-natural-capital .table-container .natural-capital thead th,
.ce-start-dropdown .ce-start-dropdown-wrapper button.ce-start-dropdown,
.ce-table table thead th,
.dce-accordeon .accordion-title,
.magazine-header .header-text p::first-letter,
.story-top-teaser .teaser-container .headline,
.story-top-teaser .teaser-container .headline p,
.desktop-menu-wrapper .dropdown.menu .category-parent-link,
.facts-figures-copy,
.navigation-second-level,
.navigation-heading,
.links-secondary,
.links-download,
.links-cta--white,
.links-cta,
.slick-dots li button,
.label-dark,
h6,
.headline-6,
.headline-5-uppercase,
h4,
.headline-4,
h3,
.headline-3,
.headline-3 > p,
h2,
.headline-2,
h1,
.headline-1,
.category,
body p b,
body p strong {
    font-family: "Averta PE Extrabold";
}

.ce-facts-dynamic
    .switch-buttons
    .switch-buttons-wrapper
    .switch-button-second.active,
.ce-facts-dynamic
    .switch-buttons
    .switch-buttons-wrapper
    .switch-button-first.active,
.ce-quote .ce-quote-textwrapper .ce-quote-text .ce-quote-text-author,
.tx-powermail .powermail_select,
.tx-powermail .powermail_fieldwrap_type_textarea .powermail-label,
.tx-powermail .powermail_label,
.tx-powermail .powermail_field .powermail_input,
.tx-powermail .powermail_field .powermail_textarea,
.shop-nav-wrapper ul li.current,
.lang-nav-wrapper ul li.current,
.copy-medium b,
.copy-medium strong,
.copy b,
.copy strong,
.label-medium,
h5,
.headline-5,
body table b,
body table strong,
body p b,
body p strong,
body li b,
body li strong {
    font-family: "Averta PE Bold";
}

.ce-table table tr,
.ce-it-textwrapper .ce-it-text .img-caption,
.ce-images .caption,
.dce-map .copy-medium,
.flatpickr-calendar .flatpickr-monthSelect-month,
.flatpickr-calendar .flatpickr-current-month input.cur-year,
.footer .footer-bottom .copyright,
.footer .footer-bottom .title,
.footer .footer-content,
.footer .footer-submenu,
.off-canvas-right-badge-wrapper button.label-light {
    font-family: "Averta PE Regular";
}

.ce-graphic-natural-capital .description,
.ce-graphic-natural-capital .key,
.ce-facts-dynamic .switch-buttons .switch-buttons-wrapper .switch-button-second,
.ce-facts-dynamic .switch-buttons .switch-buttons-wrapper .switch-button-first,
.ce-quote .ce-quote-textwrapper .ce-quote-text .ce-quote-text-authorsubline,
.tx-powermail .powermail_field .powermail_input:focus ~ .powermail_label,
.tx-powermail .powermail_field .powermail_textarea:focus ~ .powermail_label,
.tx-powermail .powermail_field .powermail_input:focus,
.tx-powermail .powermail_field .powermail_textarea:focus,
.story-teaser .teaser-col .teaser-container .category,
.story-top-teaser .teaser-container .category p,
[class*="si-wrapper"],
.shop-nav-wrapper ul li a,
.lang-nav-wrapper ul li a,
.facts-figures,
.navigation,
.footer,
.copy-small li,
.copy-small,
.copy-medium,
.copy,
.p-intro,
.ce-table thead,
.label-light,
.ce-table .ckbodytext h2,
body {
    font-family: "Averta PE Light";
}

